updated marketing copy for landing page

--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -37,7 +37,7 @@
                     <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                 </div>
                 <p style="padding: 16px 24px;">
-                    PipeStack is a powerful new API that helps you build amazing apps for your content. Whether you need a mobile or web solution, PipeStack's backend service will deliver your content in ways you could have only imaged before. Use our publishing platform or integrate with your current CMS.
+                    PipeStack is a powerful API that helps you build amazing apps for your content. Whether you need a mobile or web solution, our service will help deliver your content in great new ways. Use our publishing platform or integrate with your current CMS.
                     {#Our backend service gives you the tools you need to deliver your content through astonishing mobile and web apps.#}
                     {#Whether you need a mobile app or web app solution, our backend service will deliver your content in ways you could only dream of.#}
                     {#PipeStack is a powerful new technology that helps you do amazing things with your content. Our backend CMS service makes it easy to turn your content into astonishing web and mobile apps. Create new content with our interface or integrate your current CMS.#}
