updated marketing copy for landing page

--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -37,7 +37,7 @@
                     <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                 </div>
                 <p style="padding: 16px 24px;">
-                    PipeStack is an API that helps you build amazing apps for your content. Whether you need a mobile or web solution, our service will help you deliver content in powerful new ways. Use our publishing platform or integrate with your current CMS.
+                    PipeStack is an API that helps you build amazing apps for your content. Whether you need a mobile or web solution, our service will help you manage and deliver content in powerful new ways. Use our publishing platform or integrate with your current CMS.
                     {#Our backend service gives you the tools you need to deliver your content through astonishing mobile and web apps.#}
                     {#Whether you need a mobile app or web app solution, our backend service will deliver your content in ways you could only dream of.#}
                     {#PipeStack is a powerful new technology that helps you do amazing things with your content. Our backend CMS service makes it easy to turn your content into astonishing web and mobile apps. Create new content with our interface or integrate your current CMS.#}
@@ -62,9 +62,9 @@
             </section>
             <section class="span4">
                 <div class="tile" id="mobile-tile">
-                    <h2>jQuery Mobile</h2>
+                    <h2>Mobile Ready</h2>
                     <i class="icon-tablet icon-4x"></i>
-                    <p>PipeStack is well suited to power your jQuery Mobile app's backend. We help you deliver the best user experience through fast load times and low overhead.</p>
+                    <p>PipeStack is well suited to power your content oriented mobile app. We help you deliver the best user experience through fast load times and low overhead.</p>
                 </div>
             </section>
             <section class="span4">
