updated marketing copy for landing page

--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -32,20 +32,18 @@
                 <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="570" height="472"/>
             </div>
             <div class="span6">
-                <h1 id='primary-header'>PipeStack</h1>
+                <h1 id='primary-header' style="font-size: 51px; line-height: 50px;">Content Management Redefined</h1>
                 <div class="visible-phone" id="mobile-imac-container">
                     <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                 </div>
-                <p style="padding: 16px 24px;">
-                    PipeStack is an API that helps you build amazing apps for your content. Whether you need a mobile or web solution, our service will help you manage and deliver content in powerful new ways. Use our publishing platform or integrate with your current CMS.
+                <p style="padding: 20px 24px;">
+                    PipeStack is a scalable and powerful content management service. We take care of the backend and you'll never have to worry about servers. Your data is delivered through a lightening fast API so you can build impressive mobile and web solutions for your content.
+                    {#PipeStack is an API that helps you build amazing apps for your content. Whether you need a mobile or web solution, our service will help you manage and deliver content in powerful new ways. Use our publishing platform or integrate with your current CMS.#}
                     {#Our backend service gives you the tools you need to deliver your content through astonishing mobile and web apps.#}
                     {#Whether you need a mobile app or web app solution, our backend service will deliver your content in ways you could only dream of.#}
                     {#PipeStack is a powerful new technology that helps you do amazing things with your content. Our backend CMS service makes it easy to turn your content into astonishing web and mobile apps. Create new content with our interface or integrate your current CMS.#}
                 </p>
-                <p style="padding: 18px;">
-                    Give it a go and try it for free today.
-                </p>
-                <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger">Try It Today For Free</a>
+                <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger" style="margin-top: 30px;">Try It Today For Free</a>
             </div>
         </section>
     </div>
@@ -92,9 +90,9 @@
             </section>
             <section class="span4">
                 <div class="tile" id="cog-tile">
-                    <h2><span id="new-tech-affix">New</span> Technology</h2>
+                    <h2>Scalable</h2>
                     <i class="icon-cog icon-4x"></i>
-                    <p>PipeStack's complete technology stack combines new database technology with high end servers and powerful content delivery networks.</p>
+                    <p>PipeStack's complete backend stack combines new cutting edge database and server technology to make your content scale cost effectively.</p>
                 </div>
             </section>
         </div>
