added cloud-baas landing page

--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -12,7 +12,7 @@
 {% block title %}PipeStack CMS Backend Service | Welcome{% endblock %}
 
 {% block metatags %}
-    <meta name="description" content="PipeStack is a backend content management service used to create astonishing Web and jQuery Mobile Apps in no time. PipeStack is fast, scalable, easy to use.">
+    <meta name="description" content="PipeStack is a scalable and powerful content management service..">
 {% endblock %}
 
 {% block body %}
