added marketing stuff to cloud baas landing page

--- a/src/Cms/CoreBundle/Resources/views/Welcome/cloudBaas.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/cloudBaas.html.twig
@@ -79,16 +79,16 @@
                 </section>
                 <section class="span4">
                     <div class="tile" id="multilingual-tile">
-                        <h2>CMS Integration</h2>
+                        <h2>Schema Design</h2>
                         <i class="icon-globe icon-4x"></i>
-                        <p>Integrating your content management system can be done through the API. Use your current CMS and PipeStack in parallel to bring your content to new levels.</p>
+                        <p>Our backend service includes a pre-formatted schema to handle commonly used CMS objects. This helps you get up and running quickly.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="cog-tile">
                         <h2>Scalable</h2>
                         <i class="icon-cog icon-4x"></i>
-                        <p>PipeStack's complete backend stack combines new cutting edge database and server technology to make your content scale cost effectively.</p>
+                        <p>PipeStack's BaaS combines a fleshed out code base with MongoDB and AWS technology to make your content scale cost effectively.</p>
                     </div>
                 </section>
             </div>
