updated cloud baas copy to include cloud section. Added backendCMs landing page

--- a/src/Cms/CoreBundle/Resources/views/Welcome/backendCms.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/backendCms.html.twig
@@ -32,12 +32,12 @@
                     <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="570" height="472"/>
                 </div>
                 <div class="span6">
-                    <h1 id='primary-header' style="font-size: 51px; line-height: 50px;">Cloud BaaS For Your Content</h1>
+                    <h1 id='primary-header' style="font-size: 51px; line-height: 50px;">Backend CMS</h1>
                     <div class="visible-phone" id="mobile-imac-container">
                         <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                     </div>
                     <p style="padding: 20px 24px;">
-                        PipeStack is powerful cloud BaaS that takes your content management to the next level. With PipeStack, you can add a scalable and powerful backend for your content in minutes. Lower your costs by dropping traditional CMS hosting solutions and increase revenue by ensuing fast load times for all of your visitors.
+                        PipeStack is powerful backend CMS service that takes your content management to the next level. . Lower your costs by dropping traditional CMS hosting solutions and increase revenue by ensuing fast load times for all of your visitors.
                     </p>
                     <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger" style="margin-top: 30px;">Try It Today For Free</a>
                 </div>
@@ -55,17 +55,17 @@
                     </div>
                 </section>
                 <section class="span4">
-                    <div class="tile" id="multilingual-tile">
-                        <h2>Cloud</h2>
-                        <i class="icon-globe icon-4x"></i>
-                        <p>Our backend service is hosted in the cloud so you'll never have to worry about managing servers, setting databases or daily backups. We take care of that for you.</p>
+                    <div class="tile" id="mobile-tile">
+                        <h2>Mobile Optimized</h2>
+                        <i class="icon-tablet icon-4x"></i>
+                        <p>Building powerful content oriented mobile apps is a breeze. Let our API do the hard lifting on the backend while you focus on your apps core code base.</p>
                     </div>
                 </section>
                 <section class="span4">
-                    <div class="tile" id="cog-tile">
-                        <h2>Scalable</h2>
-                        <i class="icon-cog icon-4x"></i>
-                        <p>PipeStack's BaaS combines a fleshed out code base with MongoDB and AWS technology to make your content scale cost effectively.</p>
+                    <div class="tile" id="api-tile">
+                        <h2>RESTful API</h2>
+                        <i class="icon-magic icon-4x"></i>
+                        <p>Our BaaS is delivered through a sleek web API. The interface is intuitive which means you'll be up and running in no time. Checkout the <a href="{{ path('cms_core.developers') }}">docs</a>.</p>
                     </div>
                 </section>
             </div>
@@ -78,17 +78,17 @@
                     </div>
                 </section>
                 <section class="span4">
-                    <div class="tile" id="mobile-tile">
-                        <h2>Mobile Optimized</h2>
-                        <i class="icon-tablet icon-4x"></i>
-                        <p>Building powerful content oriented mobile apps is a breeze. Let our API do the hard lifting on the backend while you focus on your apps core code base.</p>
+                    <div class="tile" id="multilingual-tile">
+                        <h2>Schema Design</h2>
+                        <i class="icon-globe icon-4x"></i>
+                        <p>Our backend service includes a pre-formatted schema to handle commonly used CMS objects. This helps you get up and running quickly.</p>
                     </div>
                 </section>
                 <section class="span4">
-                    <div class="tile" id="api-tile">
-                        <h2>RESTful API</h2>
-                        <i class="icon-magic icon-4x"></i>
-                        <p>Our BaaS is delivered through a sleek web API. The interface is intuitive which means you'll be up and running in no time. Checkout the <a href="{{ path('cms_core.developers') }}">docs</a>.</p>
+                    <div class="tile" id="cog-tile">
+                        <h2>Scalable</h2>
+                        <i class="icon-cog icon-4x"></i>
+                        <p>PipeStack's BaaS combines a fleshed out code base with MongoDB and AWS technology to make your content scale cost effectively.</p>
                     </div>
                 </section>
             </div>
