added some sections for backend cms landing page

--- a/src/Cms/CoreBundle/Resources/views/Welcome/backendCms.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/backendCms.html.twig
@@ -9,7 +9,7 @@
     {% endjavascripts %}
 {% endblock %}
 
-{% block title %}Cloud BaaS {{  parent() }}{% endblock %}
+{% block title %}Backend Service {{  parent() }}{% endblock %}
 
 {% block metatags %}
     <meta name="description" content="PipeStack is a backend content management service used to create astonishing Web and jQuery Mobile Apps in no time. PipeStack is fast, scalable, easy to use.">
@@ -37,7 +37,7 @@
                         <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                     </div>
                     <p style="padding: 20px 24px;">
-                        PipeStack is powerful backend CMS service that takes your content management to the next level. . Lower your costs by dropping traditional CMS hosting solutions and increase revenue by ensuing fast load times for all of your visitors.
+                        PipeStack is powerful backend CMS service that takes your content management to the next level. Create a scalable and powerful backend for your content management needs in minutes. Your data is accessed through an easy to use RESTful API so you can deliver your content through impressive mobile and web solutions.
                     </p>
                     <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger" style="margin-top: 30px;">Try It Today For Free</a>
                 </div>
@@ -51,44 +51,44 @@
                     <div class="tile" id='fast-tile'>
                         <h2>Fast BaaS</h2>
                         <i class="icon-bolt icon-4x"></i>
-                        <p>Our backend service loads your data super fast. We accomplish this by using a streamlined codebase in combination with cutting edge server technology.</p>
+                        <p>Our backend CMS loads your data super fast. We accomplish this by using a streamlined codebase in combination with cutting edge server side technology.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="mobile-tile">
-                        <h2>Mobile Optimized</h2>
+                        <h2>Easy Integration</h2>
                         <i class="icon-tablet icon-4x"></i>
-                        <p>Building powerful content oriented mobile apps is a breeze. Let our API do the hard lifting on the backend while you focus on your apps core code base.</p>
-                    </div>
-                </section>
-                <section class="span4">
-                    <div class="tile" id="api-tile">
-                        <h2>RESTful API</h2>
-                        <i class="icon-magic icon-4x"></i>
-                        <p>Our BaaS is delivered through a sleek web API. The interface is intuitive which means you'll be up and running in no time. Checkout the <a href="{{ path('cms_core.developers') }}">docs</a>.</p>
-                    </div>
-                </section>
-            </div>
-            <div class="row">
-                <section class="span4">
-                    <div class="tile" id="easy-to-use-tile">
-                        <h2>App Inteface</h2>
-                        <i class="icon-thumbs-up icon-4x"></i>
-                        <p>Our service includes an easy to use interface for publishing content. The user expierence has been modled after tradional CMS systems, so the learning curve is short.</p>
-                    </div>
-                </section>
-                <section class="span4">
-                    <div class="tile" id="multilingual-tile">
-                        <h2>Schema Design</h2>
-                        <i class="icon-globe icon-4x"></i>
-                        <p>Our backend service includes a pre-formatted schema to handle commonly used CMS objects. This helps you get up and running quickly.</p>
+                        <p>Use our publishing platform or integrate with your current CMS and solve your backend performance and scalability issues. Integration is as simple as an API call.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="cog-tile">
                         <h2>Scalable</h2>
                         <i class="icon-cog icon-4x"></i>
-                        <p>PipeStack's BaaS combines a fleshed out code base with MongoDB and AWS technology to make your content scale cost effectively.</p>
+                        <p>PipeStack's backend service makes use of MongoDB and AWS technology to ensure your content and media scale in a cost effective manner.</p>
+                    </div>
+                </section>
+            </div>
+            <div class="row">
+                <section class="span4">
+                    <div class="tile" id="easy-to-use-tile">
+                        <h2>Customizable</h2>
+                        <i class="icon-thumbs-up icon-4x"></i>
+                        <p>PipeStack offers unmatched flexibility. Whether your building a mobile or web solution, you won't be restricted by traditional CMS font-end limitations.</p>
+                    </div>
+                </section>
+                <section class="span4">
+                    <div class="tile" id="multilingual-tile">
+                        <h2>CMS Power</h2>
+                        <i class="icon-globe icon-4x"></i>
+                        <p>Our backend CMS includes a pre-formatted schema to handle commonly used CMS objects. This helps you get up and running quickly while keeping you flexible.</p>
+                    </div>
+                </section>
+                <section class="span4">
+                    <div class="tile" id="api-tile">
+                        <h2>RESTful API</h2>
+                        <i class="icon-magic icon-4x"></i>
+                        <p>Our backend CMS data is delivered through a sleek web API. The interface is intuitive which means you'll be up and running in no time. Checkout the <a href="{{ path('cms_core.developers') }}">docs</a>.</p>
                     </div>
                 </section>
             </div>
