--- a/src/Cms/CoreBundle/Resources/views/Welcome/cloudBaas.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/cloudBaas.html.twig
@@ -57,7 +57,7 @@
                 <section class="span4">
                     <div class="tile" id="multilingual-tile">
                         <h2>Cloud</h2>
-                        <i class="icon-globe icon-4x"></i>
+                        <i class="icon-cloud icon-4x"></i>
                         <p>Our backend service is hosted in the cloud so you'll never have to worry about managing servers, setting databases or daily backups. We take care of that for you.</p>
                     </div>
                 </section>
