added faster load time landing page

--- a/src/Cms/CoreBundle/Resources/views/Welcome/backendCms.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/backendCms.html.twig
@@ -9,10 +9,10 @@
     {% endjavascripts %}
 {% endblock %}
 
-{% block title %}Backend Service {{  parent() }}{% endblock %}
+{% block title %}Backend CMS {{  parent() }}{% endblock %}
 
 {% block metatags %}
-    <meta name="description" content="PipeStack is a backend content management service used to create astonishing Web and jQuery Mobile Apps in no time. PipeStack is fast, scalable, easy to use.">
+    <meta name="description" content="PipeStack's service builds a scalable and powerful backend for your content management needs in minutes.">
 {% endblock %}
 
 {% block body %}
