--- a/src/Cms/CoreBundle/Resources/views/Welcome/fasterLoadTime.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/fasterLoadTime.html.twig
@@ -9,10 +9,10 @@
     {% endjavascripts %}
 {% endblock %}
 
-{% block title %}Cloud BaaS {{  parent() }}{% endblock %}
+{% block title %}Faster Load Times {{  parent() }}{% endblock %}
 
 {% block metatags %}
-    <meta name="description" content="PipeStack is a backend content management service used to create astonishing Web and jQuery Mobile Apps in no time. PipeStack is fast, scalable, easy to use.">
+    <meta name="description" content="PipeStack is a powerful and scalable service that helps your content management system achieve faster load time.">
 {% endblock %}
 
 {% block body %}
@@ -37,7 +37,7 @@
                         <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                     </div>
                     <p style="padding: 20px 24px;">
-                        PipeStack is a powerful and scalable system that helps your content management system load fast. With PipeStack, you can easily add a scalable and powerful backend to your current CMS. Lower your costs by dropping traditional CMS hosting solutions and increase revenue by ensuing faster load times for all of your visitors today.
+                        PipeStack is a powerful and scalable service that helps your content management system achieve faster load time. With PipeStack, you can easily add a scalable and powerful backend to your current CMS. Lower your costs by dropping traditional CMS hosting solutions and increase revenue by ensuing faster load times for all of your visitors today.
                     </p>
                     <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger" style="margin-top: 30px;">Try It Today For Free</a>
                 </div>
