--- a/src/Cms/CoreBundle/Resources/views/Welcome/wordpress.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/wordpress.html.twig
@@ -12,7 +12,7 @@
 {% block title %}Cloud BaaS {{  parent() }}{% endblock %}
 
 {% block metatags %}
-    <meta name="description" content="PipeStack is powerful cloud BaaS that creates a scalable backend for your content in minutes.">
+    <meta name="description" content="PipeStack is a backend content management service used to create astonishing Web and jQuery Mobile Apps in no time. PipeStack is fast, scalable, easy to use.">
 {% endblock %}
 
 {% block body %}
@@ -32,12 +32,12 @@
                     <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="570" height="472"/>
                 </div>
                 <div class="span6">
-                    <h1 id='primary-header' style="font-size: 51px; line-height: 50px;">Cloud BaaS For Your Content</h1>
+                    <h1 id='primary-header' style="font-size: 51px; line-height: 50px;">WordPress <br /> Optimized</h1>
                     <div class="visible-phone" id="mobile-imac-container">
                         <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                     </div>
                     <p style="padding: 20px 24px;">
-                        PipeStack is powerful cloud BaaS that takes your content management to the next level. With PipeStack, you can add a scalable and powerful backend for your content in minutes. Lower your costs by dropping traditional CMS hosting solutions and increase revenue by ensuing fast load times for all of your visitors.
+                        PipeStack is a powerful and scalable service that helps your WordPress site load fast. Use PipeStack and lower your costs by dropping traditional WordPress high end hosting and increase revenue by ensuing faster load times for all of your visitors today.
                     </p>
                     <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger" style="margin-top: 30px;">Try It Today For Free</a>
                 </div>
@@ -49,46 +49,46 @@
             <div class="row">
                 <section class="span4">
                     <div class="tile" id='fast-tile'>
-                        <h2>Fast BaaS</h2>
+                        <h2>Lightening Fast</h2>
                         <i class="icon-bolt icon-4x"></i>
-                        <p>Our backend service loads your data super fast. We accomplish this by using a streamlined codebase in combination with cutting edge server technology.</p>
+                        <p>Our backend service provides significantly faster load times for your CMS. We accomplish this by using high tech, cutting edge database and server technology.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="multilingual-tile">
-                        <h2>Cloud</h2>
+                        <h2>Cloud Management</h2>
                         <i class="icon-cloud icon-4x"></i>
-                        <p>Our backend service is hosted in the cloud so you'll never have to worry about managing servers, setting databases or daily backups. We take care of that for you.</p>
+                        <p>Our service is managed in the cloud so you'll never have to worry about creating servers, setting up databases or tweaking performance. We take care of that for you.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="cog-tile">
                         <h2>Scalable</h2>
                         <i class="icon-cog icon-4x"></i>
-                        <p>PipeStack's BaaS combines a fleshed out code base with MongoDB and AWS technology to make your content scale cost effectively.</p>
+                        <p>The secret to PipeStack's service lies in it's incredibly scalable system. And, scalability is the key to handling more traffic while achieving faster load times for your visitors.</p>
                     </div>
                 </section>
             </div>
             <div class="row">
                 <section class="span4">
                     <div class="tile" id="easy-to-use-tile">
-                        <h2>App Inteface</h2>
+                        <h2>Easy Integration</h2>
                         <i class="icon-thumbs-up icon-4x"></i>
-                        <p>Our service includes an easy to use interface for publishing content. The user expierence has been modled after tradional CMS systems, so the learning curve is short.</p>
+                        <p>We make integration with your current CMS easy by setting up a backend link for you. Using our API you can get up and running with the PipeStack solution today.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="mobile-tile">
-                        <h2>Mobile Optimized</h2>
-                        <i class="icon-tablet icon-4x"></i>
-                        <p>Building powerful content oriented mobile apps is a breeze. Let our API do the hard lifting on the backend while you focus on your apps core code base.</p>
+                        <h2>Media Delivery</h2>
+                        <i class="icon-camera-retro icon-4x"></i>
+                        <p>Not only does our service achieve faster load times for you data, but it also achieves faster load times for your media. Load your images, video and music quickly.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="api-tile">
                         <h2>RESTful API</h2>
                         <i class="icon-magic icon-4x"></i>
-                        <p>Our BaaS is delivered through a sleek web API. The interface is intuitive which means you'll be up and running in no time. Checkout the <a href="{{ path('cms_core.developers') }}">docs</a>.</p>
+                        <p>Our service is delivered through a sleek web API. The interface is intuitive which means you'll be up and running in no time. Checkout the <a href="{{ path('cms_core.developers') }}">docs</a>.</p>
                     </div>
                 </section>
             </div>
