updated wordpress landing page marketing content

--- a/src/Cms/CoreBundle/Resources/views/Welcome/fasterLoadTime.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/fasterLoadTime.html.twig
@@ -81,7 +81,7 @@
                     <div class="tile" id="mobile-tile">
                         <h2>Media Delivery</h2>
                         <i class="icon-camera-retro icon-4x"></i>
-                        <p>Not only does our service achieve faster load times for you data, but it also achieves faster load times for your media. Load your images, video and music quickly.</p>
+                        <p>Not only does our service achieve faster load times for your data, but it also achieves faster load times for your media. Load your images, video and music quickly.</p>
                     </div>
                 </section>
                 <section class="span4">
