--- a/src/Cms/CoreBundle/Resources/views/Welcome/wordpress.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/wordpress.html.twig
@@ -51,14 +51,14 @@
                     <div class="tile" id='fast-tile'>
                         <h2>Lightening Fast</h2>
                         <i class="icon-bolt icon-4x"></i>
-                        <p>Our backend service provides significantly faster load times for your CMS. We accomplish this by using high tech, cutting edge database and server technology.</p>
+                        <p>Our backend service delivers your WordPress content at lightening fast speeds. We accomplish this by cutting edge database and server technology.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="multilingual-tile">
                         <h2>Cloud Management</h2>
                         <i class="icon-cloud icon-4x"></i>
-                        <p>Our service is managed in the cloud so you'll never have to worry about creating servers, setting up databases or tweaking performance. We take care of that for you.</p>
+                        <p>Our service is managed in the cloud so you'll never have to worry about creating servers, setting up databases or tweaking WordPress performance.</p>
                     </div>
                 </section>
                 <section class="span4">
@@ -72,16 +72,16 @@
             <div class="row">
                 <section class="span4">
                     <div class="tile" id="easy-to-use-tile">
-                        <h2>Easy Integration</h2>
+                        <h2>WP Integration</h2>
                         <i class="icon-thumbs-up icon-4x"></i>
-                        <p>We make integration with your current CMS easy by setting up a backend link for you. Using our API you can get up and running with the PipeStack solution today.</p>
+                        <p>We make integration with WordPress easy by setting up a backend link for you. Using our API you can get up and running with the PipeStack solution today.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="mobile-tile">
-                        <h2>Media Delivery</h2>
+                        <h2>Media CDN</h2>
                         <i class="icon-camera-retro icon-4x"></i>
-                        <p>Not only does our service achieve faster load times for you data, but it also achieves faster load times for your media. Load your images, video and music quickly.</p>
+                        <p>Not only does our service achieve faster load times for your WordPress data, but it also achieves faster load times for your media through a special Media CDN.</p>
                     </div>
                 </section>
                 <section class="span4">
