added Drupal landing page

--- a/src/Cms/CoreBundle/Resources/views/Welcome/wordpress.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/wordpress.html.twig
@@ -51,7 +51,7 @@
                     <div class="tile" id='fast-tile'>
                         <h2>Lightening Fast</h2>
                         <i class="icon-bolt icon-4x"></i>
-                        <p>Our backend service delivers your WordPress content at lightening fast speeds. We accomplish this by cutting edge database and server technology.</p>
+                        <p>Our backend service delivers your WordPress content at lightening fast speeds. We accomplish this by using cutting edge database and server technology.</p>
                     </div>
                 </section>
                 <section class="span4">
