--- a/src/Cms/CoreBundle/Resources/views/Welcome/drupal.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/drupal.html.twig
@@ -9,10 +9,10 @@
     {% endjavascripts %}
 {% endblock %}
 
-{% block title %} Joomla Service {{  parent() }}{% endblock %}
+{% block title %} Drupal Service {{  parent() }}{% endblock %}
 
 {% block metatags %}
-    <meta name="description" content="PipeStack is a powerful and scalable service that helps your Joomla site load fast.">
+    <meta name="description" content="PipeStack is a powerful and scalable service that helps your Drupal site load fast.">
 {% endblock %}
 
 {% block body %}
@@ -32,12 +32,12 @@
                     <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="570" height="472"/>
                 </div>
                 <div class="span6">
-                    <h1 id='primary-header' style="font-size: 51px; line-height: 50px;">Joomla <br /> Optimized</h1>
+                    <h1 id='primary-header' style="font-size: 51px; line-height: 50px;">Drupal <br /> Optimized</h1>
                     <div class="visible-phone" id="mobile-imac-container">
                         <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                     </div>
                     <p style="padding: 20px 24px;">
-                        PipeStack is a powerful and scalable service that helps your Joomla site load fast. Use PipeStack and lower your costs by dropping traditional Joomla hosting and increase revenue by ensuing faster load times for all of your visitors today.
+                        PipeStack is a powerful and scalable service that helps your Drupal site load fast. Use PipeStack and lower your costs by dropping traditional Drupal hosting and increase revenue by ensuing faster load times for all of your visitors today.
                     </p>
                     <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger" style="margin-top: 30px;">Try It Today For Free</a>
                 </div>
@@ -51,14 +51,14 @@
                     <div class="tile" id='fast-tile'>
                         <h2>Lightening Fast</h2>
                         <i class="icon-bolt icon-4x"></i>
-                        <p>Our backend service delivers your Joomla content at lightening fast speeds. We accomplish this by using cutting edge database and server technology.</p>
+                        <p>Our backend service delivers your Drupal content at lightening fast speeds. We accomplish this by using cutting edge database and server technology.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="multilingual-tile">
                         <h2>Cloud Management</h2>
                         <i class="icon-cloud icon-4x"></i>
-                        <p>Our service is managed in the cloud so you'll never have to worry about creating servers, setting up databases or tweaking Joomla performance.</p>
+                        <p>Our service is managed in the cloud so you'll never have to worry about creating servers, setting up databases or tweaking Drupal performance.</p>
                     </div>
                 </section>
                 <section class="span4">
@@ -72,16 +72,16 @@
             <div class="row">
                 <section class="span4">
                     <div class="tile" id="easy-to-use-tile">
-                        <h2>Joomla Integration</h2>
+                        <h2>Drupal Integration</h2>
                         <i class="icon-thumbs-up icon-4x"></i>
-                        <p>We make integration with Joomla easy by setting up a backend link for you. Using our API you can get up and running with the PipeStack solution today.</p>
+                        <p>We make integration with Drupal easy by setting up a backend link for you. Using our API you can get up and running with the PipeStack solution today.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="mobile-tile">
                         <h2>Media CDN</h2>
                         <i class="icon-camera-retro icon-4x"></i>
-                        <p>Not only does our service achieve faster load times for your Joomla data, but it also achieves faster load times for your media through a special Media CDN.</p>
+                        <p>Not only does our service achieve faster load times for your Drupal data, but it also achieves faster load times for your media through a special Media CDN.</p>
                     </div>
                 </section>
                 <section class="span4">
